# cc-spec

./: .cc-specignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  demo_tech_check.py  pyproject.toml  test_detector_manual.py
.cc-spec/: config.yaml  id-map.yaml
.cc-spec/templates/: agent-file-template.md  checklist-template.md  spec-template.md  tasks-template.md
apps/cc-spec-tool/: .gitignore  README.md  index.html  package.json  tsconfig.tsbuildinfo
apps/cc-spec-tool/src-tauri/: Cargo.toml  tauri.conf.json
apps/cc-spec-tool/src-tauri/capabilities/: default.json
apps/cc-spec-tool/src-tauri/icons/: icon.icns
apps/cc-spec-tool/src-tauri/resources/skills/: README.md
apps/cc-spec-tool/src-tauri/src/: claude.rs  cleanup.rs  codex_runner.rs  codex_sessions.rs  commands.rs  concurrency.rs  events.rs  export.rs  index.rs  main.rs  project_artifacts.rs  projects.rs  sidecar.rs  skills.rs  terminal.rs  translation.rs
apps/cc-spec-viewer/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
docs/: README.en.md  archive-command-guide.md  scoring-usage.md  viewer-local-translation-research.md
docs/cc-spec/: README.md  commands.md  installation.md  workflow.md
docs/features/: CC-SPEC-V0.1.4-EXECUTION.md  CC-SPEC-V0.1.5-CODEX-INTEGRATION.md  CC-SPEC-V0.1.6-SMART-CHUNKING.md  CC-SPEC-V0.1.6-SMART-CONTEXT.md  README.md  codex-progress-indicator.yaml
docs/plan/: docs-alignment-progress.yaml  docs-alignment.yaml
examples/: demo_plan_template.py
plan/: 2025-12-23_22-22-03-viewer-integration-audit.md  2025-12-23_23-13-04-rust-codex-direct-invoke.md  2025-12-25_16-54-02-codex-conpty-session-bridge.md  VIEWER_TODO.md
plan/reports/: 2025-12-23_22-34-38-phase-1-command-event-ui-mapping.md  2025-12-23_22-53-51-phase-2-event-pipeline-strategy.md  (+31 more)
script/: test_checklist_manual.py  verify_codex_runner.ps1
tests/: __init__.py  conftest.py  helpers.py  test_cmd_apply.py  test_cmd_archive.py  test_cmd_checklist.py  test_cmd_clarify.py  test_cmd_goto.py  test_cmd_init.py  test_cmd_plan.py  test_cmd_quick_delta.py  test_cmd_specify.py  test_cmd_update.py  test_command_generator.py  test_config.py  test_delta.py  test_lock.py  test_quick_delta_v13.py  test_scoring.py  test_scoring_v13.py  test_state.py  test_subagent_executor.py  test_task_parser.py  test_templates.py  test_ui.py
(+309 files in other folders)
