[package]
name = "cc-spec-tools"
version = "0.1.0"
description = "cc-spec tools desktop app"
authors = ["cc-spec"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["sync", "process", "io-util", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4"] }
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"

# Candle for local translation
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.20"
hf-hub = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
