[package]
name = "cc-spec-tools"
version = "0.1.0"
description = "cc-spec tools desktop app"
authors = ["cc-spec"]
edition = "2021"
default-run = "cc-spec-tools"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["sync", "process", "io-util", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4"] }
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
tauri-plugin-dialog = "2"

# Candle for local translation (with optional CUDA support)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.20"
hf-hub = "0.3"

# cudarc for CUDA detection (optional)
cudarc = { version = "0.12", optional = true, features = ["cuda-version-from-build-system"] }

# HTTP client for HuggingFace API
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"

# System monitoring
sysinfo = "0.30"
portable-pty = "0.9"
terminal_size = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# CUDA GPU acceleration (optional)
# Enable with: cargo build --release --features cuda
# Requires NVIDIA GPU + CUDA Toolkit
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "cudarc"]
